Adds a depth pre-pass option (View menu) for translucent models. Breaks most non-translucent models so it's set to false by default.

--- a/J3DModelViewer/View/MainWindow.xaml
+++ b/J3DModelViewer/View/MainWindow.xaml
@@ -56,6 +56,8 @@
                 <MenuItem Header="Show _Pivot" IsCheckable="True" IsChecked="{Binding Path=ViewOptions.ShowPivot}"/>
                 <MenuItem Header="Show _Grid" IsCheckable="True" IsChecked="{Binding Path=ViewOptions.ShowGrid}"/>
                 <Separator/>
+                <MenuItem Header="Render Depth PrePass" IsCheckable="True" IsChecked="{Binding Path=ViewOptions.DepthPrePass}"/>
+                <Separator/>
                 <MenuItem Header="Animate _Light" IsCheckable="True" IsChecked="{Binding Path=ViewOptions.AnimateLight}"/>
                 <Separator/>
                 <MenuItem Header="Show Bounds (_Box)" IsCheckable="True" IsChecked="{Binding Path=ViewOptions.ShowBoundingBox}"/>
